--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Alkatra:wght@400..700&family=Baloo+Bhai+2:wght@400..800&family=Berkshire+Swash&family=Doppio+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Patua+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tilt+Warp&family=Titan+One&family=Tourney:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+  font-family: "Poppins";
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+p {
+  font-size: 1.8rem;
+}
+
+button {
+  cursor: pointer;
+  font-family: "Ubuntu";
+  font-size: 1.7rem;
+  border: none;
+  padding: 1rem 1.4rem;
+  border-radius: 2.5rem;
+  background-color: #e0e1dd;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #00a896;
+  color: #fff;
+  padding: 1rem 1.6rem;
+}
+
+.app {
+  width: 50rem;
+  margin: 5rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1.2rem;
 }
