--- a/src/index.css
+++ b/src/index.css
@@ -28,12 +28,7 @@ button {
   border-radius: 2.5rem;
   background-color: #e0e1dd;
   transition: 0.3s;
-}
-
-button:hover {
-  background-color: #00a896;
-  color: #fff;
-  padding: 1rem 1.6rem;
+  width: 15rem;
 }
 
 .app {
@@ -42,5 +37,36 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 1.2rem;
+  row-gap: 1.4rem;
+}
+
+button:hover {
+  background-color: #00a896;
+  color: #fff;
+}
+
+button:disabled:hover {
+  cursor: not-allowed;
+  padding: 1rem 1.4rem;
+  background-color: #e0e1dd;
+  color: #9c9c9c;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  row-gap: 1.4rem;
+  width: 100%;
+}
+
+input {
+  padding: 0.4rem 1.4rem;
+  font-size: 1.7rem;
+  width: 40%;
+  margin-right: 1.7rem;
+}
+
+.input p {
+  width: 80%;
 }
